# UserImageManager

./: .gitignore  CMakeLists.txt  README.md
SJwt/: CMakeLists.txt
SWidget/: CMakeLists.txt  EventFilterObject.cpp  RoundedImageWidget .cpp  RoundedImageWidget.cpp  RoundedImageWidget.h  SApp.cpp  SApp.h  SBigIconButton.h  SCommentDlg.cpp  SCommentDlg.h  SHeaderView.h  SIODialog.cpp  SIODialog.h  SImageDetail.cpp  SImageDetail.h  SImageDetailDlg.cpp  SImageDetailDlg.h  SImageShowWidget.cpp  SImageShowWidget.h  SNavBar.cpp  SStandardPixmap.cpp  SSwitchButton.h  STextInputEdit.cpp  STopBar.cpp  STopBar.h  SUserComment.cpp  SUserComment.h  textButton.h
SWidget/LittleWidget/: CMakeLists.txt  SBigIconButton.cpp  SCustomIconPushButton.cpp  SCustomIconPushButton.h  SHeaderView.cpp  SImageViewer.cpp  SImageViewer.h  SNavBar.h  SSliderBar.cpp  SSliderBar.h  SSliderBarBottomInfoItem.cpp  SSliderBarBottomInfoItem.h  SSliderBarItem.cpp  SSliderBarItem.h  SStandardPixmap.h  SSwitchButton.cpp  STextInputEdit.h  SUploadorDragImageWidget.cpp  SUploadorDragImageWidget.h  textButton.cpp
SWidget/SItemDelegate/: CMakeLists.txt  SButtonDelegate.cpp  SButtonDelegate.h  SCheckDelegate.cpp  SCheckDelegate.h  SImageDelegate.cpp  SImageDelegate.h  SSwitchDelegate.cpp  SSwitchDelegate.h  SUrlDelegate.cpp  SUrlDelegate.h
SWidget/View/: CMakeLists.txt  SImageDetailView.cpp  SImageDetailView.h  SImageModifyView.cpp  SImageModifyView.h  SRescentMovementView.cpp  SRescentMovementView.h  SUploadMultiImageView.cpp  SUploadMultiImageView.h  SUploadSingleImageView.cpp  SUploadSingleImageView.h  SUserAddView.cpp  SUserAddView.h  SUserCommentView.cpp  SUserCommentView.h  SUserDetailView.cpp  SUserDetailView.h  SUserEditView.cpp  SUserEditView.h  SUserIOBaseView.cpp  SUserIOBaseView.h
SWidget/Widget/: CMakeLists.txt  SDisplayImageWidget.cpp  SDisplayImageWidget.h  SDisplayImagesScrollAreaWidget.cpp  SDisplayImagesScrollAreaWidget.h  SImageInfoWidget.cpp  SImageInfoWidget.h  SImageShowWidget.cpp  SImageShowWidget.h  SImagesJointWidget.cpp  SImagesJointWidget.h  SMaskWidget.cpp  SMaskWidget.h  SPageTopWidget.cpp  SPageTopWidget.h  SRescentMovementWidget.cpp  SRescentMovementWidget.h  SRoundedImageWidget.cpp  SRoundedImageWidget.h  SUserCommentWidget.cpp  SUserCommentWidget.h  SUserMessageWidget.cpp  SUserMessageWidget.h
UserImageManager-Client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ResourceClient.qrc  main.cpp
UserImageManager-Client/LoginRegister/: LoginRegisterDlg.cpp  LoginRegisterDlg.h  LoginRegister_Res.qrc
UserImageManager-Client/LoginRegister/LoginRegister_Res/: style.css
UserImageManager-Client/ResourceClient/: joint.css  sytle.css  upload.css  view.css
UserImageManager-Client/SubPage/: CMakeLists.txt  HomePage.cpp  HomePage.h  HomePage.ui  ImageDetailPage.cpp  ImageDetailPage.h  PersonalDetail.cpp  PersonalDetail.h  PersonalInfo.cpp  PersonalInfo.h  PersonalInfo.ui  PersonalSpace.cpp  PersonalSpace.h  SHomePage.cpp  SHomePage.h  SImageManagerPage.cpp  SImageManagerPage.h  SPersonalCenterPage.cpp  SPersonalCenterPage.h  SPersonalImagePage.cpp  SPersonalImagePage.h  SUploadImagePage.cpp  SUploadImagePage.h  SUserManagerPage.cpp  SUserManagerPage.h  UserAddDlg.cpp  UserAddDlg.h  UserDetailsDlg.cpp  UserDetailsDlg.h  UserEditDlg.cpp  UserEditDlg.h  UserManagerPage.cpp  UserManagerPage.h  UserManagerPage.ui  ui_UserManagerPage.h
UserImageManager-Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Util/: CMakeLists.txt  EventFilterObject.cpp  EventFilterObject.h  SApp.cpp  SApp.h  SConfigFile.cpp  SConfigFile.h  SFieldTranslate.cpp  SFieldTranslate.h  SHttpClient.h  SHttpPartParse.cpp  SHttpPartParse.h  SImage.cpp  SImage.h  SImageInfo.h  SResultCode.h  SSqlConnectionPool.cpp  SSqlConnectionPool.h  STimer.cpp  STimer.h
docs/: name.md
